--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/line_imgs"
+    <View
+        android:id="@+id/id_main_v"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"/>
-</LinearLayout>
+        android:layout_height="144px"
+        android:background="@color/color_4a95ea" />
+
+    <TableLayout
+        android:id="@+id/id_main_tab"
+        android:layout_width="match_parent"
+        android:layout_height="100px"
+        android:layout_below="@id/id_main_v"
+        android:background="@color/color_5ea8fe"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/id_main_vp"
+        android:layout_width="match_parent"
+        android:layout_height="1676px"
+        android:layout_below="@id/id_main_tab"/>
+</com.zhy.autolayout.AutoRelativeLayout>
