重写UI 增加分类

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="color_5ea8fe">#5ea8fe</color>
     <color name="color_4a95ea">#4a95ea</color>
+    <color name="color_ffffff">#ffffff</color>
 </resources>
