--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_height="144px"
         android:background="@color/color_4a95ea" />
 
-    <TableLayout
+    <android.support.design.widget.TabLayout
         android:id="@+id/id_main_tab"
         android:layout_width="match_parent"
         android:layout_height="100px"
