--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -5,5 +5,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/id_images_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/color_ffffff"/>
 </com.zhy.autolayout.AutoRelativeLayout>
