--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,23 @@
         android:layout_height="144px"
         android:background="@color/color_4a95ea" />
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/id_main_tab"
+    <HorizontalScrollView
+        android:id="@+id/id_hsv"
         android:layout_width="match_parent"
-        android:layout_height="100px"
-        android:layout_below="@id/id_main_v"
-        android:background="@color/color_5ea8fe"/>
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/id_main_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="150px"
+            android:layout_marginTop="50px"
+            android:layout_below="@id/id_main_v"
+            android:background="@color/color_5ea8fe"/>
+    </HorizontalScrollView>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/id_main_vp"
         android:layout_width="match_parent"
         android:layout_height="1676px"
-        android:layout_below="@id/id_main_tab"/>
+        android:layout_below="@id/id_hsv"/>
 </com.zhy.autolayout.AutoRelativeLayout>
