--- a/app/src/main/res/layout/item_images.xml
+++ b/app/src/main/res/layout/item_images.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     >
+
     <ImageView
         android:id="@+id/item_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="500px"
+        android:layout_height="800px"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"/>
-</LinearLayout>
+        android:scaleType="centerCrop" />
+</com.zhy.autolayout.AutoLinearLayout>
